Fix alignment between item summary section and price summary section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,8 +114,9 @@ button {
 
 .item {
     display: flex;
-    width: 100%;
+    max-width: 100%;
     padding: 15px;
+    padding-right: 0;
 }
 
 
@@ -181,6 +182,10 @@ button {
 }
 
 /* PRICE SUMMARY */
+
+.price-summary-section {
+    padding: 0 15px;
+}
 
 .coupons {
     display: flex;
